# local-scale

./: .gitignore  README.md  ble-scan-20260317T103512Z.json  ble-scan-20260317T113633Z.json  ble-scan-20260317T114635Z.json
backend/: README.md  pyproject.toml
backend/app/: __init__.py  db.py  main.py  models.py  schemas.py
backend/app/api/: deps.py  routes.py
backend/app/core/: config.py
backend/app/repositories/: app_settings.py  health_analyses.py  measurements.py  profiles.py  sessions.py
backend/app/services/: adapters.py  anomaly.py  anthropometric.py  bia.py  classification.py  events.py  imports.py  llm_health.py  metrics.py  seed.py  sessions.py
backend/local_scale_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: fit_bia_calibration.py
backend/tests/: conftest.py  test_anthropometric.py  test_backfill.py  test_bia.py  test_imports.py  test_live_adapter.py  test_llm_health.py  test_metrics.py  test_metrics_anthropometric.py  test_sessions.py
deploy/: deploy.sh  llm-health-prompt.txt  local-scale.env.example  local-scale.service
docs/: minipc-deploy.md  okok-calibration.md  protocol-notes.md
fixtures/imports/: sample_import.csv
fixtures/replay/: sample_measurements.json
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx
frontend/src/components/: AdminPanel.test.tsx  AdminPanel.tsx  ChartPanel.tsx  HistoryTable.tsx  ImportPanel.tsx  LiveSessionCard.test.tsx  LiveSessionCard.tsx  MetricPanel.test.tsx  (+6 more)
(+6 files in other folders)
